--- a/style.css
+++ b/style.css
@@ -353,4 +353,15 @@ footer a:hover {
 }
 #testimonials3 h2 {
   font-size: 38px;
+}
+
+@media (max-width: 790px) {
+  #contact2 .row .col-lg-4 {
+    text-align: center;
+  }
+  #contact2 .row .col-lg-4 .d-flex {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }/*# sourceMappingURL=style.css.map */
