--- a/style.scss
+++ b/style.scss
@@ -361,3 +361,17 @@ footer{
         font-size: 38px;
     }
 }
+@media (max-width :790px){
+    #contact2{
+        .row{
+           .col-lg-4{
+            text-align: center;
+            .d-flex{
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+           }        
+        }
+    }
+}
